Fixed powered by text alignment issue

--- a/registration/css/registration.scss
+++ b/registration/css/registration.scss
@@ -1014,6 +1014,7 @@ body {
 		text-decoration: none;
 		display: flex;
 		flex-direction: column;
+		align-items: center;
 	}
 
 	&__text {
